Table person {
  person_id uuid [primary key]
  name varchar(50)
  last_name varchar(50)
  birth_date date
  phone varchar(20)
  email varchar(50)
}

Table user {
  user_id uuid [primary key]
  person_id uuid
  user_status_id uuid
  username varchar(20)
  password varchar(20)
}

Table user_status {
  user_status_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table role {
  role_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table user_role {
  user_role_id uuid [primary key]
  user_id uuid
  role_id uuid
}

Table category {
  category_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table product {
  product_id uuid [primary key]
  category_id uuid
  name varchar(50)
  description varchar(80)
  sku varchar(80)
}

Table image {
  image_id uuid [primary key]
  url varchar(255)
}

Table product_image {
  product_image_id uuid [primary key]
  product_id uuid
  image_id uuid
}

Table product_batch {
  product_batch_id uuid [primary key]
  product_id uuid
  batch_status_id uuid
  batch_code varchar(100)
  quantity int
  expiration_date timestamp
}

Table batch_status {
  batch_status_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table product_price {
  product_price_id uuid [primary key]
  product_id uuid
  price decimal(10,2)
  active boolean
}

Table supplier {
  supplier_id uuid [primary key]
  name varchar(20)
  description varchar(50)
  phone varchar(20)
  email varchar(50)
}

Table supplier_product {
  supplier_product_id uuid [primary key]
  supplier_id uuid
  product_id uuid
  purchase_price decimal(10,2)
}

Table inventory {
  inventory_id uuid [primary key]
  product_id uuid
  available_stock uuid
  damaged_stock uuid
  expired_stock uuid
  updated_at datetime
}

Table inventory_movement {
  inventory_movement_id uuid [primary key]
  product_batch_id uuid
  movement_type_id uuid
  quantity uuid
  previous_stock uuid
  new_stock uuid
  reason varchar(100)
  created_at timestamp
}

Table movement_type {
  movement_type_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table cart {
  cart_id uuid [primary key]
  customer_id uuid
  employee_id uuid
  status_id uuid
}

Table cart_product {
  cart_product_id uuid [primary key]
  cart_id uuid
  product_batch_id uuid
  quantity uuid
  unit_price decimal(10,2)
  total_price decimal(10,2)
}

Table payment_method {
  payment_method_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table sale {
  sale_id uuid [primary key]
  customer_id uuid
  employee_id uuid
  payment_method_id uuid
  sale_date datetime
  total decimal(10,2)
  status_id uuid
}

Table status {
  status_id uuid [primary key]
  name varchar(20)
  description varchar(50)
}

Table sale_product {
  sale_product_id uuid [primary key]
  sale_id uuid
  product_batch_id uuid
  quantity uuid
  unit_price decimal(10,2)
  total_price decimal(10,2)
}

Ref person_user: person.person_id < user.person_id

Ref user_role_user: user.user_id < user_role.user_id
Ref user_role_role: role.role_id < user_role.role_id

Ref category_product: category.category_id < product.category_id

Ref product_price_product: product.product_id < product_price.product_id

Ref supplier_product_supplier: supplier.supplier_id < supplier_product.supplier_id
Ref supplier_product_product: product.product_id < supplier_product.product_id

Ref inventory_product: product.product_id < inventory.product_id

Ref cart_customer: user.user_id < cart.customer_id
Ref cart_employee: user.user_id < cart.employee_id

Ref cart_product_cart: cart.cart_id < cart_product.cart_id
Ref cart_product_batch: product_batch.product_batch_id < cart_product.product_batch_id

Ref sale_customer: user.user_id < sale.customer_id
Ref sale_employee: user.user_id < sale.employee_id

Ref payment_sale: payment_method.payment_method_id < sale.payment_method_id

Ref sale_product_sale: sale.sale_id < sale_product.sale_id
Ref sale_product_batch: product_batch.product_batch_id < sale_product.product_batch_id

Ref product_batch_product: product.product_id < product_batch.product_id
Ref product_batch_status: batch_status.batch_status_id < product_batch.batch_status_id

Ref inventory_movement_batch: product_batch.product_batch_id < inventory_movement.product_batch_id
Ref inventory_movement_type: movement_type.movement_type_id < inventory_movement.movement_type_id

Ref user_status_user: user_status.user_status_id < user.user_status_id

Ref product_image_product: product.product_id < product_image.product_id
Ref product_image_image: image.image_id < product_image.image_id
Ref cart_status: cart.status_id > status.status_id
